--- a/carrinho/src/main/resources/application.yml
+++ b/carrinho/src/main/resources/application.yml
@@ -11,3 +11,6 @@ eureka:
     serviceUrl:
       defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
 
+#logging:
+#  level:
+#    com.netflix: DEBUG
