--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.0.BUILD-SNAPSHOT</version>
+        <version>1.2.5.RELEASE</version>
         <relativePath/>
         <!-- lookup parent from repository -->
     </parent>
@@ -28,6 +28,7 @@
         <module>carrinho</module>
         <module>produtos</module>
         <module>registry</module>
+        <module>gateway</module>
     </modules>
 
     <dependencies>
