--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,8 @@ Temporary Items
 
 *.iml
 
+**/target/*
+
 ## Directory-based project format:
 .idea/
 # if you remove the above rule, at least ignore the following:
