--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>produtos</module>
         <module>registry</module>
         <module>gateway</module>
+        <module>config-server</module>
     </modules>
 
     <dependencies>
