--- a/carrinho/src/main/resources/application.yml
+++ b/carrinho/src/main/resources/application.yml
@@ -7,6 +7,8 @@ server:
   port: ${PORT:7372}
 
 eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 10
   client:
     serviceUrl:
       defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
